// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CantRender /> should render color values correctly 1`] = `
<Alert
  className="alert"
  closeAriaLabel="Close"
  color="warning"
  fade={true}
  isOpen={true}
  tag="div"
  transition={
    Object {
      "appear": true,
      "baseClass": "fade",
      "baseClassActive": "show",
      "enter": true,
      "exit": true,
      "in": true,
      "mountOnEnter": false,
      "onEnter": [Function],
      "onEntered": [Function],
      "onEntering": [Function],
      "onExit": [Function],
      "onExited": [Function],
      "onExiting": [Function],
      "tag": "div",
      "timeout": 150,
      "unmountOnExit": true,
    }
  }
>
  <h4
    className="alert-heading"
  >
    Hello World
  </h4>
  <p>
    Hola Mundo
  </p>
</Alert>
`;

exports[`<CantRender /> should render default values correctly 1`] = `
<Alert
  className="alert"
  closeAriaLabel="Close"
  color="danger"
  fade={true}
  isOpen={true}
  tag="div"
  transition={
    Object {
      "appear": true,
      "baseClass": "fade",
      "baseClassActive": "show",
      "enter": true,
      "exit": true,
      "in": true,
      "mountOnEnter": false,
      "onEnter": [Function],
      "onEntered": [Function],
      "onEntering": [Function],
      "onExit": [Function],
      "onExited": [Function],
      "onExiting": [Function],
      "tag": "div",
      "timeout": 150,
      "unmountOnExit": true,
    }
  }
>
  <h4
    className="alert-heading"
  >
    Hello World
  </h4>
  <p>
    Hola Mundo
  </p>
</Alert>
`;
